General categorías, definiciones, diptongo hiato

--- a/app/src/main/res/layout/fragment_ejercicio_integrador_tilde_pos.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_integrador_tilde_pos.xml
@@ -94,6 +94,7 @@
             android:id="@+id/spinnerSilaba"
             android:layout_width="229dp"
             android:layout_height="40dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -107,6 +108,7 @@
             android:layout_height="wrap_content"
             android:text="@string/integrador_silaba"
             android:textSize="@dimen/clause_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
