--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="clause_text_size">20sp</dimen>
     <dimen name="answer_text_size">20sp</dimen>
     <dimen name="button_submit_text_size">20sp</dimen>
+    <dimen name="score_text_size">50sp</dimen>
 
     <fraction name="question_vertical_bias">0.25</fraction>
     <fraction name="question_horizontal_bias">0</fraction>
