--- a/app/src/main/res/layout/fragment_lecciones.xml
+++ b/app/src/main/res/layout/fragment_lecciones.xml
@@ -11,21 +11,22 @@
         android:id="@+id/tvTitulo_lecciones"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Lecciones"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.191"
+        app:layout_constraintHorizontal_bias="0.547"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintVertical_bias="0.082" />
 
     <Button
         android:id="@+id/buttonReglaGeneral"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/button_regla_general"
-
+        android:drawableLeft="@drawable/ic_reggen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +35,10 @@
 
     <Button
         android:id="@+id/buttonDiptongoHiato"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/button_diptongo_hiato"
+        android:drawableLeft="@drawable/ic_diptongo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +47,9 @@
 
     <Button
         android:id="@+id/buttonCasosEspeciales"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_sparks"
         android:text="@string/button_casos_especiales"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
