--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -45,7 +45,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.251"
-            app:srcCompat="@drawable/logoprovi" />
+            app:srcCompat="@drawable/logocescrituratecbco" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
