--- a/app/src/main/res/layout/fragment_ejercicio_especiales_monosilabos.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_especiales_monosilabos.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="352dp"
             android:text="@string/default_text"
+            android:textColor="@color/black"
             android:textSize="@dimen/sentence_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,10 +46,10 @@
             android:textSize="@dimen/prompt_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="@fraction/question_horizontal_bias"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.162" />
+            app:layout_constraintVertical_bias="@fraction/question_vertical_bias" />
 
         <TextView
             android:id="@+id/textViewOracion1"
@@ -56,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="408dp"
             android:text="@string/default_text"
+            android:textColor="@color/black"
             android:textSize="@dimen/sentence_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +88,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewOracion2"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textViewPuntos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/puntos"
+            android:textSize="@dimen/clause_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/textViewPrompt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.77
+" />
+
+        <TextView
+            android:id="@+id/textViewPuntosHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text"
+            android:textColor="@color/green_success"
+            android:textSize="@dimen/prompt_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textViewPrompt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.038"
+            app:layout_constraintStart_toEndOf="@+id/textViewPuntos"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.770
+" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
