--- a/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
@@ -142,6 +142,35 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.777" />
 
+        <TextView
+            android:id="@+id/textViewPuntos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/puntos"
+            android:textSize="@dimen/clause_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/textViewPrompt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.77" />
+
+        <TextView
+            android:id="@+id/textViewPuntosHolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_text"
+            android:textColor="@color/green_success"
+            android:textSize="@dimen/prompt_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textViewPrompt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.032"
+            app:layout_constraintStart_toEndOf="@+id/textViewPuntos"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.770
+" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
