--- a/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
@@ -29,7 +29,7 @@
             android:id="@+id/palabra4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/general_categorias_palabra_4"
+            android:text="@string/default_text"
             android:textSize="@dimen/answer_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
             android:id="@+id/palabra2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/general_categorias_palabra_2"
+            android:text="@string/default_text"
             android:textSize="@dimen/answer_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
             android:id="@+id/palabra3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/general_categorias_palabra_3"
+            android:text="@string/default_text"
             android:textSize="@dimen/answer_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +120,7 @@
             android:id="@+id/palabra1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/general_categorias_palabra_1"
+            android:text="@string/default_text"
             android:textSize="@dimen/answer_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
