--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -43,14 +43,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textColor="@color/black"
+            android:textColor="@color/green_success"
             android:textSize="@dimen/score_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewScorePrompt"
-            app:layout_constraintVertical_bias="0.064" />
+            app:layout_constraintVertical_bias="0.05" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
